@@ -107,6 +107,11 @@
             <arg>--add-exports=javafx.graphics/com.sun.javafx.util=tpv.fxcontrol</arg>
             <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=tpv.fxcontrol</arg>
             <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.input=tpv.fxcontrol</arg>
+            <arg>--add-exports=javafx.graphics/com.sun.javafx.tk=tpv.fxcontrol</arg>
+            <arg>--add-exports=javafx.graphics/com.sun.javafx.geom.transform=tpv.fxcontrol</arg>
+            <arg>--add-exports=javafx.graphics/com.sun.javafx.stage=tpv.fxcontrol</arg>
+            <arg>--add-exports=javafx.graphics/com.sun.javafx.application=tpv.fxcontrol</arg>
+            <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.input=tpv.fxcontrol</arg>
             <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=tpv.fxcontrol</arg>
             <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.skin=tpv.fxcontrol</arg>
             <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=tpv.fxcontrol</arg>
@@ -115,6 +120,8 @@
 
           </compilerArgs>
           <options>
+            <option>--add-exports</option>
+            <option>javafx.graphics/com.sun.javafx.tk=tpv.fxcontrol</option>
             <option>--add-exports</option>
             <option>javafx.graphics/com.sun.javafx.util=tpv.fxcontrol</option>
             <option>--add-exports</option>
@@ -135,33 +142,43 @@
 
       </plugin>
 
-<!--      <plugin>-->
-<!--        <groupId>org.openjfx</groupId>-->
-<!--        <artifactId>javafx-maven-plugin</artifactId>-->
-<!--        <version>0.0.8</version>-->
-<!--        <configuration>-->
-<!--          <mainClass>tpv.fxcontrol/tpv.fxcontrol.Main</mainClass>-->
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
+        <configuration>
+          <mainClass>tpv.fxcontrol/tpv.fxcontrol.Main</mainClass>
 
-<!--            <options>-->
-<!--              <option>&#45;&#45;add-exports</option>-->
-<!--              <option>javafx.graphics/com.sun.javafx.util=tpv.fxcontrol</option>-->
-<!--              <option>&#45;&#45;add-exports</option>-->
-<!--              <option>javafx.graphics/com.sun.javafx.scene=tpv.fxcontrol</option>-->
-<!--              <option>&#45;&#45;add-exports</option>-->
-<!--              <option>javafx.graphics/com.sun.javafx.scene.traversal=tpv.fxcontrol</option>-->
-<!--              <option>&#45;&#45;add-exports</option>-->
-<!--              <option>javafx.controls/com.sun.javafx.scene.control=tpv.fxcontrol</option>-->
-<!--              <option>&#45;&#45;add-exports</option>-->
-<!--              <option>javafx.controls/com.sun.javafx.scene.control.behavior=tpv.fxcontrol</option>-->
-<!--              <option>&#45;&#45;add-exports</option>-->
-<!--              <option>javafx.controls/com.sun.javafx.scene.control.inputmap=tpv.fxcontrol</option>-->
-<!--              <option>&#45;&#45;add-exports</option>-->
-<!--              <option>javafx.controls/com.sun.javafx.scene.control.skin=tpv.fxcontrol</option>-->
+            <options>
+              <option>--add-exports</option>
+              <option>javafx.base/com.sun.javafx=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.graphics/com.sun.javafx.tk=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.graphics/com.sun.javafx.util=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.graphics/com.sun.javafx.scene=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.graphics/com.sun.javafx.scene.traversal=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.graphics/com.sun.javafx.scene.input=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.graphics/com.sun.javafx.application=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.controls/com.sun.javafx.scene.control=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.controls/com.sun.javafx.scene.control.behavior=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.controls/com.sun.javafx.scene.control.inputmap=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.controls/com.sun.javafx.scene.control.skin=tpv.fxcontrol</option>
+              <option>--add-exports</option>
+              <option>javafx.controls/com.sun.javafx.scene.control.skin.resources=tpv.fxcontrol</option>
 
-<!--            </options>-->
+            </options>
 
-<!--        </configuration>-->
-<!--      </plugin>-->
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
